# openstack-afterglow

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.en.md  README.md  config.gpu.toml.example  config.toml.example  docker-compose.prod.yml  docker-compose.yml  milestone.md  package.json  project.md  setup.py  union.md  union.toml.ecample
argocd/: README.md  application.yaml  (+3 more)
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  rate_limit.py  worker.py
backend/app/api/: admin.py  auth.py  dashboard.py  deps.py  flavors.py  images.py  instances.py  keypairs.py  libraries.py  loadbalancers.py  metrics.py  networks.py  routers.py  shares.py  volumes.py
backend/app/api/common/: __init__.py  dashboard.py  libraries.py  metrics.py  site.py  user_dashboard.py
backend/app/api/compute/: __init__.py  flavors.py  images.py  instances.py  keypairs.py
backend/app/api/container/: __init__.py  clusters.py  containers.py
backend/app/api/identity/: __init__.py  admin.py  admin_flavors.py  admin_gpu.py  admin_identity.py  admin_images.py  admin_notion.py  admin_services.py  auth.py  profile.py
backend/app/api/k3s/: __init__.py  callback.py  clusters.py  health.py
backend/app/api/network/: __init__.py  loadbalancers.py  networks.py  routers.py  security_groups.py
backend/app/api/storage/: __init__.py  file_storage.py  security_services.py  share_networks.py  share_snapshots.py  shares.py  volume_backups.py  volume_snapshots.py  volumes.py
backend/app/models/: auth.py  compute.py  containers.py  db.py  k3s.py  k3s_health.py  progress.py  storage.py
backend/app/services/: auto_backup.py  cache.py  cinder.py  cloudinit.py  gitlab_oidc.py  glance.py  heat.py  k3s_cloudinit.py  k3s_cluster.py  k3s_crypto.py  k3s_db.py  k3s_health.py  k3s_kube.py  k3s_occm.py  keystone.py  libraries.py  library_builder.py  magnum.py  manila.py  neutron.py  notion_sync.py  nova.py  octavia.py  timeseries.py  zun.py
backend/app/services/k3s_plugins/: __init__.py  barbican_kms.py  base.py  cinder_csi.py  keystone_auth.py  manila_csi.py  occm.py  octavia_ingress.py
backend/app/templates/: cloudinit_base.yaml.j2  k3s_agent.yaml.j2  k3s_agent_occm.yaml.j2  k3s_server.yaml.j2  k3s_server_occm.yaml.j2  overlay_setup.sh.j2  strategy_dynamic.sh.j2
backend/app/templates/occm/: cloud_config.conf.j2  manifests.yaml.j2
backend/app/utils/: version.py
backend/migrations/: 001_k3s_tables.sql  002_notion_config_table.sql  003_k3s_occm.sql  004_k3s_plugins.sql
backend/tests/: TESTING.md  conftest.py  test_admin_endpoints.py  test_admin_flavors.py  test_admin_identity.py  test_admin_images.py  test_admin_notion.py  test_admin_services_gpu.py  test_admin_write.py  test_auth_endpoints.py  test_auto_backup.py  test_clusters.py  test_containers.py  test_dashboard.py  test_endpoint_inventory.py  test_file_storage.py  test_flavors.py  test_floating_ips.py  test_health.py  test_images.py  test_instances.py  test_k3s_clusters.py  test_k3s_health.py  test_k3s_kube.py  test_k3s_occm.py  test_k3s_plugins.py  test_keypairs.py  test_libraries.py  test_loadbalancers.py  test_metrics.py  test_networks.py  test_notion.py  test_profile.py  test_routers.py  test_security_groups.py  test_security_services.py  test_share_networks.py  test_share_snapshots.py  test_site.py  test_user_dashboard.py  (+3 more)
backend/tests/integration/: conftest.py  credentials.py  credentials.toml.example  test_admin.py  test_admin_writes.py  test_auth.py  test_compute.py  test_containers.py  test_dashboard.py  test_file_storage.py  test_k3s.py  test_network.py  test_storage.py  test_user_writes.py
(+230 files in other folders)
