[project]
name = "afterglow-api"
version = "1.13.0"
description = "Afterglow - OpenStack VM deployment platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.125.0",
    "uvicorn[standard]==0.30.6",
    "openstacksdk==3.3.0",
    "python-keystoneclient==5.4.0",
    "jinja2==3.1.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.26",
    "httpx==0.27.2",
    "aiofiles==24.1.0",
    "redis[hiredis]==5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncmy>=0.2.9",
    "prometheus-client>=0.20.0",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false
